AT-SSO-UI Our Team

--- a/src/views/team.hbs
+++ b/src/views/team.hbs
@@ -11,7 +11,6 @@
                 <!-- Team Internship 2020 -->
                 <br>
                 <h4 class="text-left">Internship 2020</h4>
-
                 <div class="container">
                     <div class="row">
                         <div class="col-md-3">
@@ -30,7 +29,7 @@
                                 </figure>
                                 <h4>Miguel Hern&aacute;ndez</h4>
                                 <p>Service Delivery Director</p>
-                            </div><!-- /.team-member-->
+                            </div>
                         </div>
                         <div class="col-md-3">
                             <div class="team-member">
@@ -47,9 +46,18 @@
                                     </figcaption>
                                 </figure>
                                 <h4>Emilia Guillen</h4>
-                                <p>Java Dev</p>
-                            </div><!-- /.team-member-->
+                                <p>Java Developer</p>
+                            </div>
                         </div>
+                        
+                    </div>
+                </div>
+
+                <!-- Frontend Team -->
+                <br>
+                <h4 class="text-left">Frontend Team</h4>
+                <div class="container">
+                    <div class="row">
                         <div class="col-md-3">
                             <div class="team-member">
                                 <figure>
@@ -64,10 +72,9 @@
                                     </figcaption>
                                 </figure>
                                 <h4>Oscar S&aacute;nchez</h4>
-                                <p>Java Dev</p>
-                            </div><!-- /.team-member-->
+                                <p>Full Snack Architect</p>
+                            </div>
                         </div>
-
                         <div class="col-md-3">
                             <div class="team-member">
                                 <figure>
@@ -85,7 +92,7 @@
                                 </figure>
                                 <h4>The Mentor</h4>
                                 <p>Mentor</p>
-                            </div><!-- /.team-member-->
+                            </div>
                         </div>
                         <div class="col-md-3">
                             <div class="team-member">
@@ -103,7 +110,7 @@
                                 </figure>
                                 <h4>The Intern</h4>
                                 <p>Intern dude</p>
-                            </div><!-- /.team-member-->
+                            </div>
                         </div>
                         <div class="col-md-3">
                             <div class="team-member">
@@ -121,7 +128,7 @@
                                 </figure>
                                 <h4>The Intern</h4>
                                 <p>Intern dude</p>
-                            </div><!-- /.team-member-->
+                            </div>
                         </div>
                         <div class="col-md-3">
                             <div class="team-member">
@@ -139,7 +146,7 @@
                                 </figure>
                                 <h4>The Intern</h4>
                                 <p>Intern dude</p>
-                            </div><!-- /.team-member-->
+                            </div>
                         </div>
                         <div class="col-md-3">
                             <div class="team-member">
@@ -157,16 +164,70 @@
                                 </figure>
                                 <h4>The Intern</h4>
                                 <p>Intern dude</p>
-                            </div><!-- /.team-member-->
+                            </div>
                         </div>
                     </div>
                 </div>
+                <!-- Frontend Team -->
+
+                <!-- Backend Team -->
+                <br>
+                <h4 class="text-left">Backend Team</h4>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="team-member">
+                                <figure>
+                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/terry-fletcher.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
+                                    <figcaption>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
+                                            asperiores mollitia.</p>
+                                        <ul>
+                                            <li><a href="" class="social"><i class="fa fa-facebook fa-2x"></i></a></li>
+                                            <li><a href="" class="social"><i class="fa fa-twitter fa-2x"></i></a></li>
+                                            <li><a href="" class="social"><i class="fa fa-linkedin fa-2x"></i></a></li>
+                                        </ul>
+                                    </figcaption>
+                                </figure>
+                                <h4>Victor Munguia</h4>
+                                <p>Java Architect</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Backend Team -->
+
+                <!-- QE Team -->
+                <br>
+                <h4 class="text-left">QE Team</h4>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="team-member">
+                                <figure>
+                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/terry-fletcher.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
+                                    <figcaption>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
+                                            asperiores mollitia.</p>
+                                        <ul>
+                                            <li><a href="" class="social"><i class="fa fa-facebook fa-2x"></i></a></li>
+                                            <li><a href="" class="social"><i class="fa fa-twitter fa-2x"></i></a></li>
+                                            <li><a href="" class="social"><i class="fa fa-linkedin fa-2x"></i></a></li>
+                                        </ul>
+                                    </figcaption>
+                                </figure>
+                                <h4>Jose Adan</h4>
+                                <p>QE Architect</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- QE Team -->
                 <!-- Team Internship 2020 -->
 
                 <!-- Team Internship 2019 -->
                 <br>
                 <h5 class="text-left">Internship 2019</h5>
-
                 <div class="container">
                     <div class="row">
                         <div class="col-md-3">
@@ -186,7 +247,7 @@
                                 </figure>
                                 <h4>Lauren Cox</h4>
                                 <p>Creative Director</p>
-                            </div><!-- /.team-member-->
+                            </div>
                         </div>
                         <div class="col-md-3">
                             <div class="team-member">
@@ -205,7 +266,7 @@
                                 </figure>
                                 <h4>Jessie Barnett</h4>
                                 <p>UI/UX Designer</p>
-                            </div><!-- /.team-member-->
+                            </div>
                         </div>
                         <div class="col-md-3">
                             <div class="team-member">
@@ -224,7 +285,7 @@
                                 </figure>
                                 <h4>Terry Fletcher</h4>
                                 <p>Web Developer</p>
-                            </div><!-- /.team-member-->
+                            </div>
                         </div>
                         <div class="col-md-3">
                             <div class="team-member">
@@ -243,86 +304,37 @@
                                 </figure>
                                 <h4>Lauren Cox</h4>
                                 <p>Creative Director</p>
-                            </div><!-- /.team-member-->
-                        </div>
-                        <div class="col-md-3">
-                            <div class="team-member">
-                                <figure>
-                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/lauren-cox.jpg"
-                                        alt="" class="img-responsive">
-                                    <figcaption>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
-                                            asperiores mollitia.</p>
-                                        <ul>
-                                            <li><a href="" class="social"><i class="fa fa-facebook fa-2x"></i></a></li>
-                                            <li><a href="" class="social"><i class="fa fa-twitter fa-2x"></i></a></li>
-                                            <li><a href="" class="social"><i class="fa fa-linkedin fa-2x"></i></a></li>
-                                        </ul>
-                                    </figcaption>
-                                </figure>
-                                <h4>Lauren Cox</h4>
-                                <p>Creative Director</p>
-                            </div><!-- /.team-member-->
-                        </div>
-                        <div class="col-md-3">
-                            <div class="team-member">
-                                <figure>
-                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/lauren-cox.jpg"
-                                        alt="" class="img-responsive">
-                                    <figcaption>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
-                                            asperiores mollitia.</p>
-                                        <ul>
-                                            <li><a href="" class="social"><i class="fa fa-facebook fa-2x"></i></a></li>
-                                            <li><a href="" class="social"><i class="fa fa-twitter fa-2x"></i></a></li>
-                                            <li><a href="" class="social"><i class="fa fa-linkedin fa-2x"></i></a></li>
-                                        </ul>
-                                    </figcaption>
-                                </figure>
-                                <h4>Lauren Cox</h4>
-                                <p>Creative Director</p>
-                            </div><!-- /.team-member-->
-                        </div>
-                        <div class="col-md-3">
-                            <div class="team-member">
-                                <figure>
-                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/lauren-cox.jpg"
-                                        alt="" class="img-responsive">
-                                    <figcaption>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
-                                            asperiores mollitia.</p>
-                                        <ul>
-                                            <li><a href="" class="social"><i class="fa fa-facebook fa-2x"></i></a></li>
-                                            <li><a href="" class="social"><i class="fa fa-twitter fa-2x"></i></a></li>
-                                            <li><a href="" class="social"><i class="fa fa-linkedin fa-2x"></i></a></li>
-                                        </ul>
-                                    </figcaption>
-                                </figure>
-                                <h4>Lauren Cox</h4>
-                                <p>Creative Director</p>
-                            </div><!-- /.team-member-->
-                        </div>
-                        <div class="col-md-3">
-                            <div class="team-member">
-                                <figure>
-                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/lauren-cox.jpg"
-                                        alt="" class="img-responsive">
-                                    <figcaption>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
-                                            asperiores mollitia.</p>
-                                        <ul>
-                                            <li><a href="" class="social"><i class="fa fa-facebook fa-2x"></i></a></li>
-                                            <li><a href="" class="social"><i class="fa fa-twitter fa-2x"></i></a></li>
-                                            <li><a href="" class="social"><i class="fa fa-linkedin fa-2x"></i></a></li>
-                                        </ul>
-                                    </figcaption>
-                                </figure>
-                                <h4>Lauren Cox</h4>
-                                <p>Creative Director</p>
-                            </div><!-- /.team-member-->
+                            </div>
                         </div>
                     </div>
                 </div>
+
+                <!-- Frontend Team -->
+                <br>
+                <h4 class="text-left">Frontend Team</h4>
+                <div class="container">
+                    <div class="row">
+                    </div>
+                </div>
+                <!-- Frontend Team -->
+
+                <!-- Backend Team -->
+                <br>
+                <h4 class="text-left">Backend Team</h4>
+                <div class="container">
+                    <div class="row">
+                    </div>
+                </div>
+                <!-- Backend Team -->
+
+                <!-- QE Team -->
+                <br>
+                <h4 class="text-left">QE Team</h4>
+                <div class="container">
+                    <div class="row">
+                    </div>
+                </div>
+                <!-- QE Team -->
                 <!-- Team Internship 2019 -->
 
             </div>
