AT-SSO-UI Our Team

--- a/src/views/team.hbs
+++ b/src/views/team.hbs
@@ -11,6 +11,8 @@
                 <!-- Team Internship 2020 -->
                 <br>
                 <h4 class="text-left">Internship 2020</h4>
+
+                <!-- Team -->
                 <div class="container">
                     <div class="row">
                         <div class="col-md-3">
@@ -49,9 +51,9 @@
                                 <p>Java Developer</p>
                             </div>
                         </div>
-                        
                     </div>
                 </div>
+                <!-- Team -->
 
                 <!-- Frontend Team -->
                 <br>
@@ -72,7 +74,7 @@
                                     </figcaption>
                                 </figure>
                                 <h4>Oscar S&aacute;nchez</h4>
-                                <p>Full Snack Architect</p>
+                                <p>Full Stack Architect</p>
                             </div>
                         </div>
                         <div class="col-md-3">
