--- a/src/views/team.hbs
+++ b/src/views/team.hbs
@@ -18,7 +18,7 @@
                         <div class="col-md-3">
                             <div class="team-member">
                                 <figure>
-                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/terry-fletcher.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
+                                    <img src="img/internship/mike.jpg" width="300px" height="245px" alt="" class="img-responsive">
                                     <figcaption>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
                                             asperiores mollitia.</p>
