AT-SSO-UI Our Team Emi Info

--- a/src/views/team.hbs
+++ b/src/views/team.hbs
@@ -36,10 +36,9 @@
                         <div class="col-md-3">
                             <div class="team-member">
                                 <figure>
-                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/jessie-barnett.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
+                                    <img src="img/internship/emiliaGuillen.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
                                     <figcaption>
-                                        <p>Neque minima ea, a praesentium saepe nihil maxime quod esse numquam explicabo
-                                            eligendi.</p>
+                                        <p>Java Developer | Family is Priority | Love Sports</p>
                                         <ul>
                                             <li><a href="" class="social"><i class="fa fa-facebook fa-2x"></i></a></li>
                                             <li><a href="" class="social"><i class="fa fa-twitter fa-2x"></i></a></li>
