AT-SSO-UI upload photo info

--- a/src/views/team.hbs
+++ b/src/views/team.hbs
@@ -115,10 +115,9 @@
                         <div class="col-md-3">
                             <div class="team-member">
                                 <figure>
-                                    <img src="/img/internship/intern.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
+                                    <img src="/img/internship/majoyañez.png" width="300px" height="245.5px" alt="" class="img-responsive">
                                     <figcaption>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
-                                            asperiores mollitia.</p>
+                                        <p>Intern and student in the mornings in the afternoons a normal girl.</p>
                                         <ul>
                                             <li><a href="" class="social"><i class="fa fa-facebook fa-2x"></i></a></li>
                                             <li><a href="" class="social"><i class="fa fa-twitter fa-2x"></i></a></li>
@@ -126,8 +125,8 @@
                                         </ul>
                                     </figcaption>
                                 </figure>
-                                <h4>The Intern</h4>
-                                <p>Intern dude</p>
+                                <h4>Maria Jose Yañez</h4>
+                                <p>Intern</p>
                             </div>
                         </div>
                         <div class="col-md-3">
