AT-SSO-UI Added back-to-top link

--- a/src/public/css/at-sso.css
+++ b/src/public/css/at-sso.css
@@ -172,3 +172,10 @@ a.social:hover {
     -o-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out;
 }
+
+.back-to-top {
+    position: fixed;
+    bottom: 25px;
+    right: 25px;
+    display: none;
+}
