--- a/src/views/team.hbs
+++ b/src/views/team.hbs
@@ -20,8 +20,7 @@
                                 <figure>
                                     <img src="img/internship/mike.jpg" width="300px" height="245px" alt="" class="img-responsive">
                                     <figcaption>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
-                                            asperiores mollitia.</p>
+                                        <p>Product Owner | VideoGames, Guitar and Chess player | Beer Fan | Rubik Solver</p>
                                         <ul>
                                             <li><a href="" class="social"><i class="fa fa-facebook fa-2x"></i></a></li>
                                             <li><a href="" class="social"><i class="fa fa-twitter fa-2x"></i></a></li>
@@ -64,11 +63,11 @@
                                 <figure>
                                     <img src="/img/internship/oscar.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
                                     <figcaption>
-                                        <p>Full "Snack" Architect | Post Rock Music | Beer Fan</p>
+                                        <p>Full "Snack" Architect | Old School Dev | Post Rock Music | Beer Fan</p>
                                         <ul>
-                                            <li><a href="" class="social"><i class="fa fa-facebook fa-2x"></i></a></li>
                                             <li><a href="" class="social"><i class="fa fa-twitter fa-2x"></i></a></li>
                                             <li><a href="https://www.linkedin.com/in/mbaosanchez" class="social"><i class="fa fa-linkedin fa-2x"></i></a></li>
+                                            <li><a href="https://github.com/androidexj9" class="social"><i class="fa fa-git fa-2x"></i></a></li>
                                         </ul>
                                     </figcaption>
                                 </figure>
@@ -79,8 +78,7 @@
                         <div class="col-md-3">
                             <div class="team-member">
                                 <figure>
-                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/lauren-cox.jpg"
-                                        alt="" class="img-responsive">
+                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/lauren-cox.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
                                     <figcaption>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
                                             asperiores mollitia.</p>
@@ -98,7 +96,7 @@
                         <div class="col-md-3">
                             <div class="team-member">
                                 <figure>
-                                    <img src="/img/internship/LuisGomez.png" width="300px" height="245.5px" alt="" class="img-responsive">
+                                    <img src="/img/internship/luisgomez.png" width="300px" height="245.5px" alt="" class="img-responsive">
                                     <figcaption>
                                         <p>Intern in the morning, Viking in the afternoon. Skol!</p>
                                         <ul>
@@ -115,7 +113,7 @@
                         <div class="col-md-3">
                             <div class="team-member">
                                 <figure>
-                                    <img src="/img/internship/majoyañez.png" width="300px" height="245.5px" alt="" class="img-responsive">
+                                    <img src="/img/internship/majoyaniez.png" width="300px" height="245.5px" alt="" class="img-responsive">
                                     <figcaption>
                                         <p>Intern and student in the mornings in the afternoons a normal girl.</p>
                                         <ul>
@@ -125,7 +123,7 @@
                                         </ul>
                                     </figcaption>
                                 </figure>
-                                <h4>Maria Jose Yañez</h4>
+                                <h4>Maria Jose Ya&ntilde;ez</h4>
                                 <p>Intern</p>
                             </div>
                         </div>
@@ -189,7 +187,7 @@
                                     </figcaption>
                                 </figure>
                                 <h4>Victor Munguia</h4>
-                                <p>Java Architect</p>
+                                <p>JAVA Architect</p>
                             </div>
                         </div>
                     </div>
@@ -228,12 +226,48 @@
                 <br>
                 <h5 class="text-left">Internship 2019</h5>
                 <div class="container">
+                    
                     <div class="row">
                         <div class="col-md-3">
                             <div class="team-member">
                                 <figure>
-                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/lauren-cox.jpg"
-                                        alt="" class="img-responsive">
+                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/lauren-cox.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
+                                    <figcaption>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
+                                            asperiores mollitia.</p>
+                                        <ul>
+                                            <li><a href="" class="social"><i class="fa fa-facebook fa-2x"></i></a></li>
+                                            <li><a href="" class="social"><i class="fa fa-twitter fa-2x"></i></a></li>
+                                            <li><a href="" class="social"><i class="fa fa-linkedin fa-2x"></i></a></li>
+                                        </ul>
+                                    </figcaption>
+                                </figure>
+                                <h4>The Mentor</h4>
+                                <p>Mentor</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="team-member">
+                                <figure>
+                                    <img src="/img/internship/intern.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
+                                    <figcaption>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
+                                            asperiores mollitia.</p>
+                                        <ul>
+                                            <li><a href="" class="social"><i class="fa fa-facebook fa-2x"></i></a></li>
+                                            <li><a href="" class="social"><i class="fa fa-twitter fa-2x"></i></a></li>
+                                            <li><a href="" class="social"><i class="fa fa-linkedin fa-2x"></i></a></li>
+                                        </ul>
+                                    </figcaption>
+                                </figure>
+                                <h4>The Intern</h4>
+                                <p>Intern dude</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="team-member">
+                                <figure>
+                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/lauren-cox.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
                                     <figcaption>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
                                             asperiores mollitia.</p>
@@ -251,8 +285,7 @@
                         <div class="col-md-3">
                             <div class="team-member">
                                 <figure>
-                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/jessie-barnett.jpg"
-                                        alt="" class="img-responsive">
+                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/jessie-barnett.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
                                     <figcaption>
                                         <p>Neque minima ea, a praesentium saepe nihil maxime quod esse numquam explicabo
                                             eligendi.</p>
@@ -270,8 +303,7 @@
                         <div class="col-md-3">
                             <div class="team-member">
                                 <figure>
-                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/terry-fletcher.jpg"
-                                        alt="" class="img-responsive">
+                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/terry-fletcher.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
                                     <figcaption>
                                         <p>Temporibus dolor, quisquam consectetur molestias, veniam voluptatum. Beatae
                                             alias omnis totam.</p>
@@ -289,8 +321,7 @@
                         <div class="col-md-3">
                             <div class="team-member">
                                 <figure>
-                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/lauren-cox.jpg"
-                                        alt="" class="img-responsive">
+                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/lauren-cox.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
                                     <figcaption>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
                                             asperiores mollitia.</p>
@@ -342,7 +373,9 @@
 </section>
 <!-- Our Team -->
 
-<a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top" role="button" title="Back to the top!"><i class="fas fa-chevron-up"></i></a>
+<a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top" role="button" title="Back to the top!">
+    <i class="fas fa-chevron-up"></i>
+</a>
 
 <script type="text/javascript">
     $(document).ready(function () {
