AT-SSO-UI Our Team

--- a/src/views/team.hbs
+++ b/src/views/team.hbs
@@ -75,10 +75,12 @@
                                 <p>Full Stack Architect</p>
                             </div>
                         </div>
+
+                        <!-- Jello Submarine Team -->
                         <div class="col-md-3">
                             <div class="team-member">
                                 <figure>
-                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/lauren-cox.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
+                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/terry-fletcher.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
                                     <figcaption>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
                                             asperiores mollitia.</p>
@@ -89,7 +91,7 @@
                                         </ul>
                                     </figcaption>
                                 </figure>
-                                <h4>The Mentor</h4>
+                                <h4>Fabian S&aacute;nchez</h4>
                                 <p>Mentor</p>
                             </div>
                         </div>
@@ -141,7 +143,7 @@
                                         </ul>
                                     </figcaption>
                                 </figure>
-                                <h4>The Intern</h4>
+                                <h4>Yair Martinez</h4>
                                 <p>Intern dude</p>
                             </div>
                         </div>
@@ -159,19 +161,13 @@
                                         </ul>
                                     </figcaption>
                                 </figure>
-                                <h4>The Intern</h4>
+                                <h4>Erick Barreto</h4>
                                 <p>Intern dude</p>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <!-- Frontend Team -->
-
-                <!-- Backend Team -->
-                <br>
-                <h4 class="text-left">Backend Team</h4>
-                <div class="container">
-                    <div class="row">
+                        <!-- Jello Submarine Team -->
+                        
+                        <!-- Mechanical Orange Team -->
                         <div class="col-md-3">
                             <div class="team-member">
                                 <figure>
@@ -186,8 +182,58 @@
                                         </ul>
                                     </figcaption>
                                 </figure>
+                                <h4>Raul Cabrera</h4>
+                                <p>Mentor</p>
+                            </div>
+                        </div>
+                        <!-- Mechanical Orange Team -->
+
+                        <!-- Ghostbusters Team -->
+                        <div class="col-md-3">
+                            <div class="team-member">
+                                <figure>
+                                    <img src="http://www.mauritiusdsilva.com/themes/hallooou/assets/images/terry-fletcher.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
+                                    <figcaption>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
+                                            asperiores mollitia.</p>
+                                        <ul>
+                                            <li><a href="" class="social"><i class="fa fa-facebook fa-2x"></i></a></li>
+                                            <li><a href="" class="social"><i class="fa fa-twitter fa-2x"></i></a></li>
+                                            <li><a href="" class="social"><i class="fa fa-linkedin fa-2x"></i></a></li>
+                                        </ul>
+                                    </figcaption>
+                                </figure>
+                                <h4>Irving Espiritu</h4>
+                                <p>Mentor</p>
+                            </div>
+                        </div>
+                        <!-- Ghostbusters Team -->
+
+                    </div>
+                </div>
+                <!-- Frontend Team -->
+
+                <!-- Backend Team -->
+                <br>
+                <h4 class="text-left">Backend Team</h4>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="team-member">
+                                <figure>
+                                    <img src="img/internship/victorMunguia.png" width="300px" height="245.5px" alt="" class="img-responsive">
+                                    <figcaption>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
+                                            asperiores mollitia.</p>
+                                        <ul>
+                                            <li><a href="" class="social"><i class="fa fa-facebook fa-2x"></i></a></li>
+                                            <li><a href="" class="social"><i class="fa fa-twitter fa-2x"></i></a></li>
+                                            <li><a href="" class="social"><i class="fa fa-linkedin fa-2x"></i></a></li>
+                                        </ul>
+                                    </figcaption>
+                                </figure>
                                 <h4>Victor Munguia</h4>
-                                <p>JAVA Architect</p>
+                                <p>Java Architect</p>
                             </div>
                         </div>
                     </div>
