--- a/src/views/admin/user/add-user.hbs
+++ b/src/views/admin/user/add-user.hbs
@@ -20,23 +20,23 @@
                     <input type="text" name="user_name" id="user_name" class="form-control" placeholder="Type the Name" autofocus />
                 </div>
                 <div class="form-group">
-                    <label for="user_firstName">First Name:</label>
+                    <label for="user_firstName">* First Name:</label>
                     <input type="text" name="user_firstName" id="user_firstName" class="form-control" placeholder="Type the First Name" />
                 </div>
                 <div class="form-group">
-                    <label for="user_lastName">Last Name:</label>
+                    <label for="user_lastName">* Last Name:</label>
                     <input type="text" name="user_lastName" id="user_lastName" class="form-control" placeholder="Type the Last Name" />
                 </div>
                 <div class="form-group">
-                    <label for="user_email">Email:</label>
+                    <label for="user_email">* Email:</label>
                     <input type="text" name="user_email" id="user_email" class="form-control" placeholder="Type an Email" />
                 </div>
                 <div class="form-group">
-                    <label for="user_password">Password:</label>
+                    <label for="user_password">* Password:</label>
                     <input type="password" name="user_password" id="user_password" class="form-control" placeholder="Type a Password" />
                 </div>
                 <div class="form-group">
-                    <label for="user_status">Status:</label>
+                    <label for="user_status">* Status:</label>
                     <select name="user_status" id="user_status" class="form-control">
                         <option value="">- select - </option>
                         <option value="1">Active</option>
