AT-SSO-UI Our Team

--- a/src/views/team.hbs
+++ b/src/views/team.hbs
@@ -223,8 +223,7 @@
                                 <figure>
                                     <img src="img/internship/victorMunguia.png" width="300px" height="245.5px" alt="" class="img-responsive">
                                     <figcaption>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
-                                            asperiores mollitia.</p>
+                                        <p>Geek Life | #JavaForever | A Good Coffee provide good ideas</p>
                                         <ul>
                                             <li><a href="" class="social"><i class="fa fa-facebook fa-2x"></i></a></li>
                                             <li><a href="" class="social"><i class="fa fa-twitter fa-2x"></i></a></li>
@@ -234,6 +233,41 @@
                                 </figure>
                                 <h4>Victor Munguia</h4>
                                 <p>Java Architect</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="team-member">
+                                <figure>
+                                    <img src="/img/internship/eduardoCortes.png" width="300px" height="245.5px" alt="" class="img-responsive">
+                                    <figcaption>
+                                        <p></p>
+                                        <ul>
+                                            <li><a href="" class="social"><i class="fa fa-facebook fa-2x"></i></a></li>
+                                            <li><a href="" class="social"><i class="fa fa-twitter fa-2x"></i></a></li>
+                                            <li><a href="" class="social"><i class="fa fa-linkedin fa-2x"></i></a></li>
+                                        </ul>
+                                    </figcaption>
+                                </figure>
+                                <h4>Jose Eduardo Cortes Cernas</h4>
+                                <p> Overwatch Team</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="team-member">
+                                <figure>
+                                    <img src="/img/internship/intern.jpg" width="300px" height="245.5px" alt="" class="img-responsive">
+                                    <figcaption>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae
+                                            asperiores mollitia.</p>
+                                        <ul>
+                                            <li><a href="" class="social"><i class="fa fa-facebook fa-2x"></i></a></li>
+                                            <li><a href="" class="social"><i class="fa fa-twitter fa-2x"></i></a></li>
+                                            <li><a href="" class="social"><i class="fa fa-linkedin fa-2x"></i></a></li>
+                                        </ul>
+                                    </figcaption>
+                                </figure>
+                                <h4>The Intern</h4>
+                                <p>Intern dude</p>
                             </div>
                         </div>
                     </div>
