--- a/src/views/admin/user/edit-user.hbs
+++ b/src/views/admin/user/edit-user.hbs
@@ -1,52 +1,82 @@
-<div class="col-md-4 mx-auto">
-
-    {{#each userErrors}}
-    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        {{text}}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    {{/each}}
-
-    <div class="card text-left">
-        <div class="card-header">
-            <h3>Edit User</h3>
+<div class="pt-1">
+    <div class="mx-8 container" style="text-align: justify; font-weight:600;padding:2%">
+        <div class="d-flex flex-row flex-wrap p-4" style="text-align: left;">
+            <a href="/admin">&raquo; Admin</a> &nbsp; <a href="/admin/user">&raquo; User</a>
         </div>
-        <div class="card-body">
-            <!--<form action="/admin/user/edit/{{user._id}}?_method=PUT" method="POST">-->
-            <form action="/admin/user/edit/5f6c2652f8907b62c94e9fc1?_method=PUT" method="POST">
-                <input type="hidden" name="_method" value="PUT">
-                <div class="form-group">
-                    <label for="name">Name:</label>
-                    <input type="text" name="user_name" id="user_name" class="form-control" placeholder="Type the Name" autofocus />
-                </div>
-                <div class="form-group">
-                    <label for="firstName">First Name:</label>
-                    <input type="text" name="user_firstName" id="user_firstName" class="form-control" placeholder="Type the First Name" />
-                </div>
-                <div class="form-group">
-                    <label for="lastName">Last Name:</label>
-                    <input type="text" name="user_lastName" id="user_lastName" class="form-control" placeholder="Type the Last Name" />
-                </div>
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="text" name="user_email" id="user_email" class="form-control" placeholder="Type an Email" />
-                </div>
-                <div class="form-group">
-                    <label for="status">Status:</label>
-                    <select name="user_status" id="user_status" class="form-control">
-                        <option value="">- select - </option>
-                        <option value="1">Active</option>
-                        <option value="0">Inactive</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <button class="btn btn-primary btn-block" type="submit">
-                        Update
-                    </button>
-                </div>
-            </form>
+    </div>
+
+    <div class="col-md-4 mx-auto">
+
+        <!-- Section: Validation errors -->
+        {{#each userErrors}}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            {{text}}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {{/each}}
+        <!-- Section: Validation errors -->
+
+        <div class="card text-left">
+            <div class="card-header">
+                <h3>Edit User</h3>
+            </div>
+            <div class="card-body">
+
+                <!-- Section: Edit User Form -->
+                <form action="/admin/user/edit/{{user.id}}?_method=PUT" method="POST">
+
+                    <input type="hidden" name="_method" value="PUT">
+                    <div class="form-group">
+                        <label for="user_type">* Type:</label>
+                        <select name="user_type" value="" id="user_type" class="form-control" required>
+                            <option value="">- select - </option>
+                            <option value="1" {{selected user.type "1" }}>Admin</option>
+                            <option value="2" {{selected user.type "2" }}>User</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="user_firstName">* First Name:</label>
+                        <input type="text" name="user_firstName" id="user_firstName" class="form-control"
+                            value="{{user.firstName}}" placeholder="Type the First Name" required />
+                    </div>
+                    <div class="form-group">
+                        <label for="user_lastName">* Last Name:</label>
+                        <input type="text" name="user_lastName" id="user_lastName" class="form-control"
+                            value="{{user.lastName}}" placeholder="Type the Last Name" required />
+                    </div>
+                    <div class="form-group">
+                        <label for="user_email">* Email:</label>
+                        <input type="email" name="user_email" id="user_email" class="form-control" value="{{user.email}}" 
+                            placeholder="Type an Email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" /> 
+                    </div>
+                    <div class="form-group">
+                        <label for="user_password">Password:</label>
+                        <input type="password" name="user_password" id="user_password" class="form-control"
+                            placeholder="Type a Password" min="10" max="20" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=\S+$).{10,}$" />
+                        <small id="passwordHelpBlock" class="form-text text-muted">
+                            Your password must be 10-20 characters long, contain at least one uppercase character, 
+                            contain at least one lowercase character, at least one numerical character, and must not contain spaces, special characters.
+                        <small>
+                    </div>
+                    <div class="form-group">
+                        <label for="user_status">* Status:</label>
+                        <select name="user_status" id="user_status" class="form-control" required>
+                            <option value="">- select - </option>
+                            <option value="1" {{selected user.status "1" }}>Active</option>
+                            <option value="0" {{selected user.status "0" }}>Inactive</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-primary btn-block" type="submit">
+                            Update
+                        </button>
+                    </div>
+                </form>
+                <!-- Section: Edit User Form -->
+
+            </div>
         </div>
     </div>
 </div>
