AT-SSO-UI 31 We have refactor the code of testing and controllers

--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -16,7 +16,18 @@
                         <span class="d-lg-none">Home</span>
                     </a>
                 </li>
-
+                <li class="nav-item">
+                    <a class="nav-link" href="https://at-university-ui.herokuapp.com/dashboard">
+                        <span class="d-none d-lg-block">AT University</span>
+                        <span class="d-lg-none">AT University</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://at-resources-ui.herokuapp.com/dashboard">
+                        <span class="d-none d-lg-block">AT Resources</span>
+                        <span class="d-lg-none">AT Resources</span>
+                    </a>
+                </li>
             </ul>
 
             <ul class="navbar-nav ml-auto">
