--- a/src/views/admin/index.hbs
+++ b/src/views/admin/index.hbs
@@ -17,7 +17,7 @@
                <table style="width: 100%">
                     <tr>
                          <td style="text-align: left;">
-                              <h4>AT-SCE</h4>
+                              <h4>AT-SSO</h4>
                          </td>
                     </tr>
                     <tr>
