--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -8,6 +8,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
+                {{#if user}}
                 <li class="nav-item active">
                     <a class="nav-link" href="/home">
                         <span class="d-none d-lg-block">
@@ -28,20 +29,20 @@
                         <span class="d-lg-none">AT Resources</span>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://at-sce-ui.herokuapp.com">
+                        <span class="d-none d-lg-block">AT SCE</span>
+                        <span class="d-lg-none">AT SCE</span>
+                    </a>
+                </li>
+                {{/if}}
             </ul>
 
             <ul class="navbar-nav ml-auto">
+                {{#if user}}
                 <li class="nav-item">
                     <a class="nav-link" href="#">
-                        Welcome: New User {{user.name}}
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <span id="notification-icon">
-                            <img src="/img/icons/menu-notification-icon.png" title="You have 1 message" class="icons">
-                            <span id="notification-number" title="You have 1 message">1</span>
-                        </span>
+                        Welcome: {{user.data.firstName}} {{user.data.lastName}}
                     </a>
                 </li>
                 <li class="nav-item">
@@ -49,6 +50,11 @@
                         <img src="/img/icons/menu-logout-icon.png" title="Logout" class="icons">
                     </a>
                 </li>
+                {{else}}
+                <li class="nav-item">
+                    <a class="nav-link" href="/signin"><b>Login</b></a>
+                </li>
+                {{/if}}
             </ul>
         </div>
     </div>
