--- a/src/views/signin.hbs
+++ b/src/views/signin.hbs
@@ -1,5 +1,17 @@
 <div class="row">
     <div class="col-md-4 mx-auto" style="min-width: 250px;">
+
+        <!-- Section: Validation errors -->
+        {{#each loginErrors}}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            {{text}}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {{/each}}
+        <!-- Section: Validation errors -->
+    
         <div class="card mt-4 text-center">
             <div class="card-header">
                 <img src="/img/at-logo-round.png" title="AT" width="150">
@@ -8,10 +20,13 @@
             <div class="card-body">
                 <form action="/signin" method="POST">
                     <div class="form-group">
-                        <input type="email" class="form-control" name="email" placeholder="Email" autofocus>
+                        <input type="email" class="form-control" name="email" placeholder="Email"
+                            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" autofocus 
+                            required>
                     </div>
                     <div class="form-group">
-                        <input type="password" class="form-control" name="password" placeholder="Password">
+                        <input type="password" class="form-control" name="password" placeholder="Password" 
+                            required>
                     </div>
                     <button class="btn btn-primary btn-block">
                         Sign in
