--- a/src/views/signin.hbs
+++ b/src/views/signin.hbs
@@ -1,40 +1,42 @@
-<div class="row">
-    <div class="col-md-4 mx-auto" style="min-width: 250px;">
+<div class="col-md-3 mx-auto" style="min-width: 200px;">
 
-        <!-- Section: Validation errors -->
-        {{#each loginErrors}}
-        <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            {{text}}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+    <!-- Section: Validation errors -->
+    {{#each loginErrors}}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        {{text}}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {{/each}}
+    <!-- Section: Validation errors -->
+
+    <div class="card mt-4 text-center">
+        <div class="card-header">
+            <img src="/img/at-logo-round.png" title="AT" width="150">
+            <h1 class="h4">Login</h1>
         </div>
-        {{/each}}
-        <!-- Section: Validation errors -->
-    
-        <div class="card mt-4 text-center">
-            <div class="card-header">
-                <img src="/img/at-logo-round.png" title="AT" width="150">
-                <h1 class="h4">Login</h1>
-            </div>
-            <div class="card-body">
-                <form action="/signin" method="POST">
-                    <div class="form-group">
-                        <input type="email" class="form-control" name="email" placeholder="Email"
-                            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" autofocus 
-                            required>
-                    </div>
-                    <div class="form-group">
-                        <input type="password" class="form-control" name="password" placeholder="Password" 
-                            required>
-                    </div>
-                    <button class="btn btn-primary btn-block">
-                        Sign in
-                    </button>
-                    <br>
-                    <a href="#">Forgot password?</a>
-                </form>
-            </div>
+        <div class="card-body">
+
+            <!-- Section: Login Form -->
+            <form action="/signin" method="POST">
+                <div class="form-group">
+                    <input type="email" class="form-control" name="email" placeholder="Email"
+                        pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" autofocus 
+                        required>
+                </div>
+                <div class="form-group">
+                    <input type="password" class="form-control" name="password" placeholder="Password" 
+                        required>
+                </div>
+                <button class="btn btn-primary btn-block">
+                    Sign in
+                </button>
+                <br>
+                <a href="#">Forgot password?</a>
+            </form>
+            <!-- Section: Login Form -->
+
         </div>
     </div>
 </div>
